src/test/deca/context/invalid/created/binary_exp/op_arith/div_int_boolean.deca
// Description :
//    test div entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type int, L’opérande droite est de type boolean. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur /

{
int a;
boolean b;
int c = a / b;
}

